log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 11:14:17 PM UTC: 
 tests:  0|6
total_score: 0/70
d9794c3
Thu 30 Mar 2023 11:17:49 PM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:19:16: error: expected expression before ‘ArrayList’
   19 |         return ArrayList;
      |                ^~~~~~~~~
arraylist.c:20:1: error: control reaches end of non-void function [-Werror=return-type]
   20 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7f36e39
Thu 30 Mar 2023 11:18:10 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:15:18: error: ‘new’ is used uninitialized [-Werror=uninitialized]
   15 |         new->data=NULL;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
92a3b4d
Thu 30 Mar 2023 11:18:43 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:15:22: error: ‘new’ is used uninitialized [-Werror=uninitialized]
   15 |         new->capacity=0;
      |         ~~~~~~~~~~~~~^~
cc1: all warnings being treated as errors
Compilation failed
e56dbb8
Thu 30 Mar 2023 11:19:21 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
58a873f
Thu 30 Mar 2023 11:24:42 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
4d9233f
Thu 30 Mar 2023 11:25:09 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
2b37da3
Thu 30 Mar 2023 11:25:47 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ff2e372
Thu 30 Mar 2023 11:29:07 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
3a15a04
